# BraneScript

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Doxyfile  LICENSE  README.md  conanfile.txt  docusaurus.config.ts  main.cpp  package-lock.json  package.json  test.bscript  test.bscript.txt  vcpkg.json
antlr4/: CMakeLists.txt  brane.g4  brane.interp  brane.tokens  braneBaseVisitor.cpp  braneBaseVisitor.h  braneLexer.cpp  braneLexer.h  braneLexer.interp  braneLexer.tokens  braneParser.cpp  braneParser.h  braneVisitor.cpp  braneVisitor.h
antlr4/include/antlr4/: DefaultErrorStrategy.h
scripting/: CMakeLists.txt  baseTypes.h  bytecode.cpp  bytecode.h  compiler.cpp  compiler.h  functionHandle.cpp  functionHandle.h  functionReference.cpp  functionReference.h  irFunction.cpp  irScript.h  library.cpp  library.h  linker.cpp  linker.h  nativeTypes.cpp  nativeTypes.h  operandNode.cpp  operandNode.h  operands.h  script.cpp  script.h  scriptFunction.cpp  scriptFunction.h  scriptRuntime.cpp  scriptRuntime.h  structDefinition.cpp  structDefinition.h  typeDef.cpp  typeDef.h  typeInfo.h  valueIndex.cpp  valueIndex.h
scripting/aotNode/: aotFlowNodes.cpp  aotFlowNodes.h  aotNode.cpp  aotNode.h  aotOperationNodes.cpp  aotOperationNodes.h  aotValueNodes.cpp  aotValueNodes.h
src/: CMakeLists.txt  baseTypes.h  buildBSModules.py  compiler.cpp  compiler.h  functionHandle.cpp  functionHandle.h  generateNativeConstructors.py  irFunction.cpp  irFunction.h  irScript.cpp  irScript.h  library.cpp  library.h  linker.cpp  linker.h  nativeTypes.cpp  nativeTypes.h  operands.h  operator.cpp  operator.h  script.h  scriptRuntime.cpp  structDefinition.cpp  structDefinition.h  typeDef.cpp  valueIndex.h
src/aotNode/: aotFlowNodes.cpp  aotFlowNodes.h  aotNode.cpp  aotNode.h  aotOperationNodes.cpp  aotOperationNodes.h  aotValueNodes.cpp  aotValueNodes.h
src/bsIncludes/: Funcitons.bs  NativeConstructors.bs  String.bs  Vector.bs
src/bsModules/: lambda.bsm  loadOrder.txt  nativeConstructors.bsm  string.bsm  unsafe.bsm  vector.bsm
src/cli/: CMakeLists.txt  main.cpp
src/cliTool/: CMakeLists.txt  main.cpp
src/compiler/: CMakeLists.txt  analyzer.cpp  analyzer.h  compiler.cpp  compiler.h  constexprEvaluator.cpp  constexprEvaluator.h  documentContext.cpp  documentContext.h  operator.cpp  operator.h  textPos.h
src/compiler/aotInlineFunctions/: aotInlineFunction.cpp  aotInlineFunction.h  aotNativeOperators.cpp  aotNativeOperators.h
src/compiler/aotNodes/: aotFlowNodes.cpp  aotFlowNodes.h  aotLogicNodes.cpp  aotLogicNodes.h  aotModifierNodes.cpp  aotModifierNodes.h  aotNode.cpp  aotNode.h  aotOperationNodes.cpp  aotOperationNodes.h  aotValueNodes.cpp  aotValueNodes.h
src/compiler/ast/: ast.cpp  ast.h  astWalker.cpp  astWalker.h  expressions.cpp  expressions.h  module.cpp  module.h  scopedId.cpp  scopedId.h  source.h  statements.h
src/compiler/nativeIncludes/: String.bs  Vector.bs
src/compiler/staticAnalysis/: constexprEvaluator.cpp  constexprEvaluator.h  documentContext.cpp  documentContext.h  functionCallTree.cpp  functionCallTree.h  generateIncludesFile.py  staticAnalyzer.cpp  staticAnalyzer.h  textPos.h
src/css/: custom.css
src/debugger/: CMakeLists.txt  main.cpp
src/documentBackend/: CMakeLists.txt  documentReader.cpp  documentReader.h  documentSource.h  parser.cpp  parser.h
src/documentBackend/antlr4/: CMakeLists.txt  brane.g4  brane.interp  braneBaseVisitor.h  braneLexer.cpp  braneLexer.h  braneLexer.interp  braneLexer.tokens  braneParser.cpp  braneParser.h  braneVisitor.cpp  braneVisitor.h
src/documentBackend/lspServer/: CMakeLists.txt  lspServer.h  main.cpp  tokenSerializer.cpp  tokenSerializer.h
src/ir/: CMakeLists.txt  ir.h  nodes.cpp  nodes.h
src/lspServer/: CMakeLists.txt  lspMessage.cpp  lspMessage.h  lspServer.cpp  lspServer.h  main.cpp  tokenSerializer.cpp
src/pages/: index.tsx
src/parser/: CMakeLists.txt  SymbolLookupTable.cpp  SymbolLookupTable.h  TSBindings.cpp  TSBindings.h  documentContext.cpp  documentContext.h  documentParser.cpp  documentParser.cpp~  documentParser.cpz~  documentParser.h  tree_sitter_BraneScript.h
src/scriptRuntime/: CMakeLists.txt  funcRef.cpp  funcRef.h  functionHandle.cpp  functionHandle.h  irFunction.h  irScript.cpp  irScript.h  library.cpp  library.h  linker.cpp  linker.h  nativeLibrary.cpp  nativeLibrary.h  nativeTypes.cpp  nativeTypes.h  operands.h  script.cpp  script.h  scriptRuntime.cpp  scriptRuntime.h  structDef.cpp  structDef.h  structDefinition.cpp  structDefinition.h  typeDef.cpp  typeDef.h  typeInfo.h  valueIndex.cpp  valueIndex.h  valueType.cpp  valueType.h  varType.h
src/scriptRuntime/nativeTypes/: BSLambda.cpp  BSLambda.h  BSString.cpp  BSString.h  bsLambda.cpp  bsString.cpp  bsString.h  bsVector.cpp  bsVector.h
src/types/: CMakeLists.txt  valueType.cpp  valueType.h
src/util/: references.h  rustisms.h
src/utility/: DependencyGraph.h  Resource.h  serializedData.h  staticIndexVector.h
tests/: CMakeLists.txt  apiTests.bs  apiTests.cpp  arrayTests.bs  arrayTests.cpp  compileTimeTests.cpp  emptyPlaceholder.cpp  flowStatementTests.bs  flowStatementTests.cpp  funcDefTests.cpp  functionRefTests.bs  functionRefTests.cpp  globalVariableTests.bs  globalVariableTests.cpp  globalVariables.cpp  lambdaTests.bs  lambdaTests.cpp  libraryTests.cpp  objectTests.bs  objectTests.cpp  operatorTests.bs  operatorTests.cpp  overrideTests.bs  overrideTests.cpp  parseWhileTypingTest.bs  parseWhileTypingTest.cpp  recursionTest.bs  recursionTest.cpp  refTests.bs  refTests.cpp  speedTests.bs  speedTests.cpp  stringTests.bs  stringTests.cpp  templateTests.bs  templateTests.cpp  testing.cpp  testing.h  unsafeTests.bs  unsafeTests.cpp  (+2 more)
tree-sitter-BraneScript/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-BraneScript/bindings/c/: tree-sitter-branescript_parser.pc.in
tree-sitter-BraneScript/bindings/go/: binding.go  binding_test.go
tree-sitter-BraneScript/src/: grammar.json  node-types.json  parser.c
(+26 files in other folders)
