[package]
name = "tree-sitter-branescript-parser"
description = "Parser for BraneScript text files"
version = "0.1.0"
authors = ["WireWhiz"]
license = "Apache 2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "branescript-parser"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/wirewhiz/branescript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
