[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-branescript-parser"
description = "Parser for BraneScript text files"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "branescript-parser"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "WireWhiz" }]
requires-python = ">=3.9"
license.text = "Apache 2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/wirewhiz/branescript"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
